--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,310 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link rel="icon" href="./images/logo.svg">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    >
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="body">
+    <header id="about" class="header">
+      <div class="header__top-bar top-bar">
+        <div class="top-bar__container">
+          <div class="top-bar__content">
+            <a href="#menu" class="top-bar__menu"></a>
+            <a href="#" class="top-bar__logo"></a>
+          </div>
+        </div>
+      </div>
+      <div class="header__container">
+        <div class="header__art-museum art-museum">
+          <img
+            src="./images/header/header-image.png"
+            alt="museum"
+            class="art-museum__picture"
+          >
+          <div class="art-museum__content">
+            <h1 class="art-museum__title title-font">ХУДОЖНІЙ МУЗЕЙ</h1>
+            <a href="#" class="art-museum__button">Квитки</a>
+            <div class="art-museum__add">
+              <a href="#events" class="art-museum__event">Події</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside id="menu" class="menu">
+      <div class="menu__container">
+        <div class="menu__content">
+          <nav class="menu__navigation">
+            <a href="#" class="menu__icon-close"></a>
+            <ul class="menu__list menu__list--navigation">
+              <li class="menu__item">
+                <a href="#gallery" class="menu__link after">Галерея</a>
+              </li>
+              <li class="menu__item">
+                <a href="#subscribe" class="menu__link after">Про Нас</a>
+              </li>
+              <li class="menu__item">
+                <a href="#events" class="menu__link after">Виставки та події</a>
+              </li>
+              <li class="menu__item">
+                <a href="#contacts" class="menu__link after">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+          <nav class="menu__schedule">
+            <div class="menu__schedule-main">
+              <p class="menu__schedule-title">Графік роботи</p>
+              <ul class="menu__list menu__list--schedule">
+                <li class="menu__item"><span class="menu__bold">12:00— 20:00</span> середа</li>
+                <li class="menu__item"><span class="menu__bold">12:00— 20:00</span> четвер</li>
+                <li class="menu__item"><span class="menu__bold">12:00 — 20:00</span> п’ятниця</li>
+                <li class="menu__item"><span class="menu__bold">11:00 — 19:00</span> субота</li>
+                <li class="menu__item"><span class="menu__bold">11:00 — 19:00</span>неділя</li>
+              </ul>
+            </div>
+            <p class="menu__day-off">
+              <span class="menu__bold">Вихідні:</span> понеділок, вівторок<br>
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </nav>
+        </div>
+      </div>
+    </aside>
+
+    <main class="page">
+      <section id="events" class="page__current-events current-events">
+        <div class="current-events__container">
+          <h2 class="current-events__title title-font">Актуальні події</h2>
+          <div class="current-events__blocks">
+            <article class="current-events__block leave-and-come-back">
+              <img
+                src="./images/current/1.png"
+                alt="view"
+                class="current-events__picture"
+              >
+              <div class="current-events__main">
+                <p class="current-events__day">
+                  ВИСТАВКА
+                  <span class="current-events__date">26.08-29.11.2019</span>
+                </p>
+                <div class="current-events__content">
+                  <p class="current-events__subtitle title-font">Йду і повертаюсь</p>
+                  <p class="current-events__text">
+                    Національний Художній Музей України презентує унікальну частину колекції
+                    Градобанку - українське мистецтво другої половини 1980-1995 років.
+                  </p>
+                </div>
+              </div>
+            </article>
+            <article class="current-events__block memories-and-dreams">
+              <img
+                src="./images/current/2.png"
+                alt="girl"
+                class="current-events__picture"
+              >
+              <div class="current-events__main">
+                <div class="current-events__day">
+                  <p>ВИСТАВКА</p>
+                  <span class="current-events__date">26.08-29.11.2019</span>
+                </div>
+                <div class="current-events__content">
+                  <p class="current-events__subtitle current-events__subtitle--after title-font">І спогади і мрії</p>
+                  <p class="current-events__text">
+                    Національний художній музей України до 100 річчя від дня народження   видатної української художниці
+                    Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                  </p>
+                </div>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
+      <section class="page__from-classicism-to-romanticism from-classicism-to-romanticism">
+        <div class="from-classicism-to-romanticism__main">
+          <div class="from-classicism-to-romanticism__day">
+            <p>ЛЕКЦІЯ</p>
+            <span class="from-classicism-to-romanticism__date">26/08/2019 - 11:00</span>
+          </div>
+          <h3 class="from-classicism-to-romanticism__title title-font">Від класицизму до романтизму</h3>
+        </div>
+      </section>
+      <section id="gallery" class="page__gallery gallery">
+        <div class="gallery__container">
+          <h2 class="gallery__title title-font">Галерея</h2>
+          <div class="gallery__main">
+            <img
+              src="./images/gallery/1.png"
+              alt="art"
+              class="gallery__main-image gallery__main-image--1"
+            >
+            <img
+              src="./images/gallery/2.png"
+              alt="art"
+              class="gallery__main-image gallery__main-image--2"
+            >
+            <img
+              src="./images/gallery/3.png"
+              alt="art"
+              class="gallery__main-image gallery__main-image--3"
+            >
+            <img
+              src="./images/gallery/4.png"
+              alt="art"
+              class="gallery__main-image gallery__main-image--4"
+            >
+          </div>
+          <div class="gallery__swiper swiper">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide swiper-slide--1">
+              </div>
+              <div class="swiper-slide swiper-slide--2">
+              </div>
+              <div class="swiper-slide swiper-slide--3"></div>
+              <div class="swiper-slide swiper-slide--4"></div>
+            </div>
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+      </section>
+      <section id="subscribe" class="page__subscribe subscribe">
+        <div class="subscribe__content  ">
+          <div class="subscribe__main">
+            <h2 class="subscribe__title title-font">Підписка</h2>
+            <p class="subscribe__subtitle">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          </div>
+          <form
+            onsubmit="this.reset(); return false;"
+            class="subscribe__form"
+          >
+            <input
+              required
+              placeholder="Email"
+              name="email"
+              type="text"
+              class="subscribe__input title-font"
+            >
+            <button type="submit" class="subscribe__button"></button>
+          </form>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer__container">
+        <div class="footer__content">
+          <div class="footer__icons">
+            <a href="#about" class="footer__logo">
+              <img
+                src="./images/logo.svg"
+                alt="logo"
+              >
+            </a>
+            <div class="footer__socials">
+              <a
+                target="_blank"
+                href="https://www.facebook.com/"
+                class="footer__icon footer__icon--facebook"
+              >
+                <img
+                  src="./images/footer/facebook.svg"
+                  alt="facebook"
+                >
+              </a>
+              <a
+                target="_blank"
+                href="https://www.instagram.com/"
+                class="footer__icon footer__icon--instagram"
+              >
+                <img
+                  src="./images/footer/instagram.svg"
+                  alt="instagram"
+                >
+              </a>
+            </div>
+          </div>
+          <div class="footer__info">
+            <div class="footer__main">
+              <nav class="footer__schedule">
+                <div class="footer__schedule-main">
+                  <p class="footer__schedule-title">Графік роботи</p>
+                  <ul class="footer__list footer__list--schedule">
+                    <li class="footer__item"><span class="footer__bold">12:00— 20:00</span> середа</li>
+                    <li class="footer__item"><span class="footer__bold">12:00— 20:00</span> четвер</li>
+                    <li class="footer__item"><span class="footer__bold">12:00 — 20:00</span> п’ятниця</li>
+                    <li class="footer__item"><span class="footer__bold">11:00 — 19:00</span> субота</li>
+                    <li class="footer__item"><span class="footer__bold">11:00 — 19:00</span>  неділя</li>
+                  </ul>
+                </div>
+                <p class="footer__day-off">
+                  <span class="footer__bold">Вихідні:</span> понеділок, вівторок<br>
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </p>
+              </nav>
+              <nav id="contacts" class="footer__contacts">
+                <p class="footer__contact">Контакти:</p>
+                <ul class="footer__list">
+                  <li class="footer__item">
+                    <a
+                      target="_blank"
+                      href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4494431,30.5281844,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F11l76wtstx?hl=uk-UK&entry=ttu"
+                      class="footer__link">вул. М. Грушевського, 6; Київ, 01001
+                    </a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="tel:+38 (044) 278-13-57" class="footer__link">тел. +38 (044) <br> 278-13-57</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="tel: +38 (044) 278-74-54" class="footer__link">факс +38 (044) 278-74-54</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="mailto:info@namu.kiev.ua" class="footer__link">e-mail: info@namu. <br>kiev.ua</a>
+                  </li>
+                </ul>
+              </nav>
+              <a href="#about" class="footer__button">
+                <img
+                  src="./images/footer/arrow.svg"
+                  alt="arrow"
+                  class="footer__arrows"
+                >
+              </a>
+            </div>
+            <nav class="footer__navigation">
+              <ul class="footer__list footer__list--navigation">
+                <li class="footer__item">
+                  <a href="#gallery" class="footer__link after">Галерея</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#subscribe" class="footer__link after">Про нас</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#events" class="footer__link after">Виставки та події</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#contacts" class="footer__link after">Контакти</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <div class="footer__copyright">
+          <p class="footer__designed">Designed by Zhyriada Marina</p>
+          <p class="footer__copy">Copyright © 2019. All Rights Reserved.</p>
+        </div>
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
