--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,365 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>HAMY</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
+
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <aside class="menu" id="menu">
+      <a href="#" class="menu__close-icon">
+      </a>
+
+      <nav class="menu__nav">
+        <ul class="menu__list">
+          <div class="menu__wrap">
+            <li class="menu__item">
+              <a class="menu__link menu__font--style" href="#gallery">
+                Галерея
+              </a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link menu__font--style" href="#footer">
+                Про Нас
+              </a>
+            </li>
+          </div>
+
+          <div class="menu__wrap">
+            <li class="menu__item">
+              <a class="menu__link menu__font--style" href="#events">
+                Виставки та події
+              </a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link menu__font--style" href="#footer">
+                Контакти
+              </a>
+            </li>
+          </div>
+        </ul>
+      </nav>
+
+      <div class="menu__line"></div>
+
+      <div class="menu__schedule">
+        <div class="menu__schedule--title">Графік роботи</div>
+        <div class="menu__schedule--working-days">
+          <p><span class="menu__schedule--b">12:00 — 20:00</span> середа</p>
+          <p><span class="menu__schedule--b">12:00 — 20:00</span> четвер</p>
+          <p><span class="menu__schedule--b">12:00 — 20:00</span> п’ятниця</p>
+          <p><span class="menu__schedule--b">11:00 — 19:00</span> субота</p>
+          <p><span class="menu__schedule--b">11:00 — 19:00</span> неділя</p>
+        </div>
+
+        <div class="menu__schedule--weekend">
+          <p>
+            <span class="menu__schedule--b">Вихідні:</span> понеділок, вівторок
+            <br>Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+      </div>
+
+      <div class="menu__bg"></div>
+    </aside>
+
+    <header class="header page__padding">
+      <section class="header__bar">
+        <div class="header__bar--icon">
+          <a href="#menu" class="header__bar--icon--menu"></a>
+        </div>
+
+      </section>
+      <a href="#" class="header__bar--logo">
+        <h2 class="header__bar--logo--text">
+          NA<br>MU
+        </h2>
+      </a>
+
+      <section class="header__items">
+        <div class="header__items--title">
+          <div class="header__items--title-t">
+            <h1 class="header__items--title-t--text">
+              ХУДОЖНІЙ
+              МУЗЕЙ
+            </h1>
+          </div>
+
+          <a href="#" class="header__items--title-form">
+            <div class="header__items--title-form--input">
+              <p class="header__items--title-form--text">
+                КВИТКИ
+              </p>
+              <div class="header__items--title-form--button"></div>
+            </div>
+          </a>
+
+          <a href="#events" class="header__items--events">
+            <div class="header__items--events--line"></div>
+            <div class="header__items--events--text">ПОДІЇ</div>
+          </a>
+        </div>
+      </section>
+      <div class="header__bg">
+        <div class="header__bg--photo"></div>
+      </div>
+    </header>
+
+    <main>
+      <section class="current-events page__padding" id="events">
+        <h2 class="current-events__title">Актуальні події</h2>
+        <div class="current-events__topic">
+          <div class="current-events__topic--photo">
+            <div class="current-events__topic--photo-size">
+              <img src="./images/Come_and_back.png" alt="Going and coming back">
+            </div>
+          </div>
+
+          <div class="current-events__topic--paragraph">
+            <div class="current-events__topic--paragraph--date">
+              <p class="current-events__topic--paragraph--date-event">
+                виставка
+              </p>
+              <p class="current-events__topic--paragraph--date-calendar">
+                26.08-29.11.2019
+              </p>
+            </div>
+            <p class="current-events__topic--paragraph--title">
+              Йду і повертаюсь
+            </p>
+            <p class="current-events__topic--paragraph--description">
+              Національний Художній Музей України презентує
+              унікальну частину колекції Градобанку -
+              українське мистецтво другої половини
+              1980-1995 років.
+            </p>
+          </div>
+        </div>
+
+        <div class="current-events__topic">
+          <div class="current-events__topic--photo">
+            <div class="current-events__topic--photo-size">
+              <img src="./images/Memories_of_dream.png" alt="And memories and dreams">
+            </div>
+          </div>
+
+          <div class="current-events__topic--paragraph">
+            <div class="current-events__topic--paragraph--date">
+              <p class="current-events__topic--paragraph--date-event">
+                виставка
+              </p>
+              <p class="current-events__topic--paragraph--date-calendar">
+                26.08-29.11.2019
+              </p>
+            </div>
+            <p class="current-events__topic--paragraph--title">
+              І спогади і мрії
+            </p>
+            <p class="current-events__topic--paragraph--description">
+              Національний художній музей України до 100
+              річчя від дня народження   видатної української
+              художниці  Тетяни Яблонської  відкриває
+              ретроспективну ювілейну виставку «І спогади і
+              мрії».
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="classicism">
+        <div class="classicism__bg"></div>
+        <div class="classicism__block">
+          <div class="classicism__block--form">
+            <div class="classicism__block--form--border">
+              <p class="classicism__block--form--border-l">
+                лекція
+              </p>
+              <p class="classicism__block--form--border-d">
+                26/08/2019 - 11:00
+              </p>
+              <div class="classicism__block--form--border--lection-date">
+              </div>
+
+              <p class="classicism__block--form--border--title">
+                Від класицизму до
+                романтизму
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery page__padding" id="gallery">
+        <h2 class="gallery__title">Галерея</h2>
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide first">
+              <div class="gallery__swiper--photo-1">
+              </div>
+            </div>
+            <div class="swiper-slide second">
+              <div class="gallery__swiper--photo-2"></div>
+            </div>
+            <div class="swiper-slide third">
+              <div class="gallery__swiper--photo-3"></div>
+            </div>
+            <div class="swiper-slide fourth">
+              <div class="gallery__swiper--photo-4"></div>
+            </div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </section>
+
+      <section class="subscribe">
+        <div class="subscribe__bg"></div>
+        <div class="subscribe__bar">
+          <div class="subscribe__bar--header">
+            <h2 class="subscribe__bar--header--title">
+              Підписка
+            </h2>
+
+            <p class="subscribe__bar--header--description">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+
+            <form
+              onsubmit="this.reset(); return false;"
+              action="#"
+              method="get"
+              class="subscribe__bar--small-bar"
+            >
+              <div class="subscribe__bar--small-bar--input">
+                <input
+                  type="email"
+                  placeholder="E-mail"
+                  name="small_email"
+                  class="subscribe__bar--small-bar--input--in"
+                >
+              </div>
+
+              <div class="subscribe__bar--small-bar--button">
+                <input
+                  type="submit"
+                  value=" "
+                  class="subscribe__bar--small-bar--button--in">
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer page__padding" id="footer">
+      <div class="footer__logo">
+        <a href="#" class="footer__logo--logo">
+          <h2 class="footer__logo--logo--text">
+            NA<br>
+            MU
+          </h2>
+        </a>
+
+        <div class="footer__logo--icons">
+          <a href="#" class="footer__logo--icons--facebook">
+            <img
+              src="./images/facebook-letter-logo.png"
+              alt="facebook"
+              class="footer__logo--icons--facebook--icon"
+            >
+          </a>
+
+          <a href="#" class="footer__logo--icons--instagram">
+            <img
+              src="./images/instagram icon.png"
+              alt="instagram"
+              class="footer__logo--icons--instagram--icon"
+            >
+          </a>
+        </div>
+      </div>
+
+      <div class="footer__schedule">
+        <div class="footer__schedule--title">Графік роботи</div>
+        <div class="footer__schedule--working-days">
+          <p><span class="footer__schedule--b">12:00 — 20:00</span> середа</p>
+          <p><span class="footer__schedule--b">12:00 — 20:00</span> четвер</p>
+          <p><span class="footer__schedule--b">12:00 — 20:00</span> п’ятниця</p>
+          <p><span class="footer__schedule--b">11:00 — 19:00</span> субота</p>
+          <p><span class="footer__schedule--b">11:00 — 19:00</span> неділя</p>
+          <br>
+          <p>
+            <span class="footer__schedule--b">Вихідні:</span> понеділок,<br>
+            вівторок
+            Каса припиняє роботу за
+            1 годину
+            до закриття музею
+          </p>
+        </div>
+      </div>
+
+      <div class="footer__contacts">
+        <div class="footer__contacts--title">Контакти</div>
+        <div class="footer__contacts--working-days">
+          <p class="footer__contacts--b">
+            вул. М. Грушевського, 6;
+            Київ, 01001<br>
+            тел. +38 (044) 278-13-57<br>
+            факс +38 (044) 278-74-54<br>
+            e-mail: info@namu.kiev.ua
+          </p>
+        </div>
+      </div>
+
+      <div class="footer__line"></div>
+
+      <nav class="footer__nav">
+        <ul class="footer__list">
+          <div class="footer__wrap">
+            <li class="footer__item-left">
+              <a class="footer__link footer__font--style" href="#gallery">
+                Галерея
+              </a>
+            </li>
+            <li class="footer__item-right">
+              <a class="footer__link footer__font--style" href="#footer">
+                Про Нас
+              </a>
+            </li>
+            <li class="footer__item-left">
+              <a class="footer__link footer__font--style" href="#events">
+                Виставки та поді
+              </a>
+            </li>
+            <li class="footer__item-right">
+              <a class="footer__link footer__font--style" href="#footer">
+                Контакти
+              </a>
+            </li>
+          </div>
+        </ul>
+      </nav>
+
+      <div class="footer__copyright">
+        <p class="footer__copyright--left">Copyright © 2019. All Rights Reserved.</p>
+        <p class="footer__copyright--right">Designed by Zhyriada Marina</p>
+      </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="./styles/main.js"></script>
   </body>
 </html>
