--- a/src/index.html
+++ b/src/index.html
@@ -32,14 +32,16 @@
         </div>
         <div class="header__inform">
           <h1 class="header__title">Художній<br> музей</h1>
-          <a class="header__tickets tickets">
+          <a class="header__tickets tickets" href="#events">
             <div class="tickets__title">Квитки</div>
             <div class="button"></div>
           </a>
         </div>
-        <a class="header__events events-link">
-          <div class="events-link__line"></div>
-          <h4 class="event-type-title event-type-title--header">Події</h4>
+        <a class="header__events events-link" href="#events">
+          <div class="events-link__wrapper">
+            <div class="events-link__line"></div>
+            <h4 class="event-type-title event-type-title--header">Події</h4>
+          </div>
         </a>
       </div>
     </header>
@@ -52,16 +54,16 @@
             <nav class="nav menu__nav">
               <ul class="nav__list">
                 <li class="nav__item">
-                  <a class="nav__link nav__link--menu" href="#">Галерея</a>
+                  <a class="nav__link nav__link--menu" href="#gallery">Галерея</a>
                 </li>
                 <li class="nav__item">
-                  <a class="nav__link nav__link--menu" href="#">Про Нас</a>
+                  <a class="nav__link nav__link--menu" href="#subscription">Про Нас</a>
                 </li>
                 <li class="nav__item">
-                  <a class="nav__link nav__link--menu" href="#">Виставки та події</a>
+                  <a class="nav__link nav__link--menu" href="#events">Виставки та події</a>
                 </li>
                 <li class="nav__item">
-                  <a class="nav__link nav__link--menu" href="#">Контакти</a>
+                  <a class="nav__link nav__link--menu" href="#footer">Контакти</a>
                 </li>
               </ul>
             </nav>
@@ -72,7 +74,7 @@
             <div class="schedule-address__wrapper">
               <p class="schedule-address__description">
                 <strong>12:00 — 20:00</strong> середа<br>
-                <strong>12:00 — 20:00</strong>  четвер<br>
+                <strong>12:00 — 20:00</strong> четвер<br>
                 <strong>12:00 — 20:00</strong> п’ятниця<br>
                 <strong>11:00 — 19:00</strong> субота<br>
                 <strong>11:00 — 19:00</strong> неділя<br>
@@ -88,7 +90,7 @@
     </aside>
 
     <main class="main">
-      <section class="events">
+      <section class="events" id="events">
         <div class="events__content container">
           <h2 class="events__title section-title">Актуальні події</h2>
           <div class="events__items">
@@ -145,7 +147,7 @@
             alt="Lecture backgraund"
           >
           <article class="lecture__text-block">
-            <div class="lecture__footer">
+            <div class="lecture__top">
               <h4 class="lecture__event-title event-type-title">Лекція</h4>
               <p class="event__date">26/08/2019 - 11:00</p>
             </div>
@@ -154,7 +156,7 @@
         </div>
       </section>
 
-      <section class="gallery">
+      <section class="gallery" id="gallery">
         <div class="gallery__content container">
           <h2 class="gallery__title section-title">Галерея</h2>
 
@@ -162,7 +164,7 @@
             <ul class="gallery-descktop__list">
               <li class="gallery-descktop__item gallery-descktop__item--1">
                 <img
-                  class="gallery-descktop__img"
+                  class="gallery-descktop__img gallery-descktop__img--1"
                   src="../src/images/gallery/gallery-img-1.jpg"
                   alt="gallery img 1"
                 >
@@ -215,25 +217,33 @@
         </div>
       </section>
 
-      <section class="subscription">
+      <section class="subscription" id="subscription">
         <div class="subscription__wrapper">
           <div class="subscription__content container">
             <h2 class="subscription__title section-title">Підписка</h2>
             <p class="subscription__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
-            <div class="subscription__field">
+
+            <form
+              class="subscription__form"
+              action="http://localhost:3000/api"
+              method="post"
+              name="contact-form"
+              onsubmit="this.reset(); return false;"
+            >
               <input
                 class="subscription__input"
-                type="text"
+                type="email"
                 placeholder="E-mail"
               >
               <button class="button button--black"></button>
-            </div>
+            </form>
+
           </div>
         </div>
       </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer" id="footer">
       <div class="container">
         <div class="footer__content">
           <section class="footer__icons icons">
@@ -245,14 +255,22 @@
               >
             </a>
             <div class="icons__social">
-              <a class="social-icon" href="#">
+              <a
+                class="social-icon"
+                href="https://www.facebook.com/"
+                target="_blank"
+              >
                 <img
                   class="icons__img"
                   src="../src/images/icons/facebook.svg"
                   alt="NA MU logo"
                 >
               </a>
-              <a class="social-icon" href="#">
+              <a
+                class="social-icon"
+                href="https://www.instagram.com/"
+                target="_blank"
+              >
                 <img
                   class="icons__img"
                   src="../src/images/icons/instagram.svg"
@@ -262,8 +280,8 @@
             </div>
           </section>
           <section class="footer__schedule schedule-address">
-            <p class="schedule-address__title">Графік роботи</p>
-            <p class="schedule-address__description">
+            <p class="schedule-address__title schedule-address__title--footer">Графік роботи</p>
+            <p class="schedule-address__description schedule-address__description--footer">
               <strong>12:00 — 20:00</strong> середа<br>
               <strong>12:00 — 20:00</strong>  четвер<br>
               <strong>12:00 — 20:00</strong> п’ятниця<br>
@@ -274,13 +292,17 @@
             </p>
           </section>
           <section class="footer__address schedule-address">
-            <p class="schedule-address__title">Контакти:</p>
-            <p class="schedule-address__description">
+            <p class="schedule-address__title schedule-address__title--footer">Контакти:</p>
+            <a
+              class="schedule-address__description schedule-address__description--footer"
+              href="https://maps.app.goo.gl/mKxTM57ZRfjk1rxFA"
+              target="_blank"
+            >
               вул. М. Грушевського, 6; Київ, 01001<br>
               тел. +38 (044) 278-13-57<br>
               факс +38 (044) 278-74-54<br>
               e-mail: info@namu.kiev.ua<br>
-            </p>
+            </a>
 
             <a class="footer__arrow-up" href="#">
               <div class="arrow-up"></div>
@@ -292,16 +314,16 @@
           <nav class="footer__nav nav">
             <ul class="nav__list">
               <li class="nav__item">
-                <a class="nav__link" href="#">Галерея</a>
+                <a class="nav__link" href="#gallery">Галерея</a>
               </li>
               <li class="nav__item">
-                <a class="nav__link" href="#">Про Нас</a>
+                <a class="nav__link" href="#subscription">Про Нас</a>
               </li>
               <li class="nav__item">
-                <a class="nav__link" href="#">Виставки та події</a>
+                <a class="nav__link" href="#events">Виставки та події</a>
               </li>
               <li class="nav__item">
-                <a class="nav__link" href="#">Контакти</a>
+                <a class="nav__link" href="#footer">Контакти</a>
               </li>
             </ul>
           </nav>
