--- a/src/index.html
+++ b/src/index.html
@@ -126,6 +126,166 @@
       </div>
       <div class="menu__overlay"></div>
     </aside>
+
+    <main class="main">
+      <section class="current">
+        <div class="container">
+          <h2 class="page-title">
+            Актуальні події
+          </h2>
+
+          <div class="current__cards">
+            <article class="card">
+              <img
+                src="./images/card/card-1.png"
+                alt="Йду і повертаюсь"
+                class="card__img"
+              >
+
+              <div class="card__caption">
+                <p class="card__category">
+                  ВИСТАВКА
+                </p>
+
+                <p class="card__date">
+                  26.08-29.11.2019
+                </p>
+              </div>
+
+              <h3 class="card__title">
+                Йду і повертаюсь
+              </h3>
+
+              <p class="card__text">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </article>
+
+            <article class="card">
+              <img
+                src="./images/card/card-2.png"
+                alt="І спогади і мрії"
+                class="card__img"
+              >
+
+              <div class="card__caption">
+                <p class="card__category">
+                  ВИСТАВКА
+                </p>
+
+                <p class="card__date">
+                  26.08-29.11.2019
+                </p>
+              </div>
+
+              <h3 class="card__title">
+                І спогади і мрії
+              </h3>
+
+              <p class="card__text">
+                Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <section class="announcement">
+        <div class="container">
+          <div class="announcement__content">
+            <div class="announcement__caption">
+              <p class="announcement__category">
+                ЛЕКЦІЯ
+              </p>
+
+              <p class="announcement__date">
+                26/08/2019 - 11:00
+              </p>
+            </div>
+
+            <h3 class="announcement__title">
+              Від класицизму до романтизму
+            </h3>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery">
+        <div class="container">
+          <h2 class="page-title">
+            Галерея
+          </h2>
+
+          <div class="slider">
+            <div class="slider__imgs">
+              <img
+                src="./images/slider/slider-1.png"
+                alt="gallery photo"
+                class="slider__img slider__img--1"
+              >
+
+              <img
+                src="./images/slider/slider-1-2.png"
+                alt="gallery photo"
+                class="slider__img slider__img--2"
+              >
+
+              <img
+                src="./images/slider/slider-2.png"
+                alt="gallery photo"
+                class="slider__img slider__img--3"
+              >
+
+              <img
+                src="./images/slider/slider-3.png"
+                alt="gallery photo"
+                class="slider__img slider__img--4"
+              >
+
+              <img
+                src="./images/slider/slider-4.png"
+                alt="gallery photo"
+                class="slider__img slider__img--5"
+              >
+            </div>
+
+            <ul class="slider__nav">
+              <li class="slider__item slider__item--active"></li>
+              <li class="slider__item"></li>
+              <li class="slider__item"></li>
+              <li class="slider__item"></li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <section class="sub">
+        <div class="container">
+          <h2 class="page-title sub__title">
+            Підписка
+          </h2>
+
+          <p class="sub__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+
+          <form
+            action="#"
+            class="form"
+            method="post"
+            onsubmit="this.reset(); return false;"
+          >
+            <input
+              class="form__input"
+              type="email"
+              placeholder="E-mail"
+              required
+            >
+            <button class="form__btn"></button>
+          </form>
+        </div>
+      </section>
+    </main>
     <script src="scripts/main.js"></script>
   </body>
 </html>
